<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NHIC</string>
    <string name ="trackingId">UA–51856239–1</string>

    <string name="defaultSermon">God Is Good</string>
    <string name="defaultPastor">Ps. Varun Laohaprasit MD</string>
    <string name="defaultDate">March 14, 2014</string>
    <string name="defaultDuration">48:55</string>
    <string name="defaultAnnouncement">NHIC News!</string>
    <string name="defaultAnnouncementDesc">There is church on Sunday!</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="defaultText">This page is currently under construction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="searchHint">Search for podcast</string>
    <string name="homeMsg">We are an international, protestant, evangelical, charismatic, non-denominational church.  Our senior pastors are Ps. Varun and Da Laohaprasit, who are devoting their time and lives to reaching out to local communities and internationally.</string>

    <!-- No internet connection messages -->
    <string name="noInternetConnectionTitle">No Internet Connection</string>
    <string name="pleaseConnectToInternetMessage">Please connect to the internet to see content</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Announcements</item>
        <item>Podcasts</item>
        <item>Videos</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_announce</item>
        <item>@drawable/ic_podcasts</item>
        <item>@drawable/ic_video</item>
        <item>@drawable/ic_settings</item>
    </array>

    <!-- RSS podcast XML URLs sorted by language -->
    <string name="englishPodcastURL">http://www.newhic.org/Media/Audio/rss.xml</string>
    <string name="thaiPodcastURL">http://www.newhic.org/Media/Thai/rss.xml</string>
    <string name="mandarinPodcastURL">http://www.newhic.org/Media/Mandarin/rss.xml</string>
    <string name="japanesePodcastURL">http://www.newhic.org/Media/Japanese/rss.xml</string>
    <string name="germanPodcastURL">http://www.newhic.org/Media/German/rss.xml</string>

    <!-- Podcast Language Selector Items -->
    <string-array name="podcast_lang_select">
        <item>English</item>
        <item>ไทย</item>
        <item>中文</item>
        <item>日本の</item>
        <item>Deutsch</item>
    </string-array>

    <!-- Podcast Language URL Items -->
    <string-array name="podcast_lang_url_sel">
        <item>@string/englishPodcastURL</item>
        <item>@string/thaiPodcastURL</item>
        <item>@string/mandarinPodcastURL</item>
        <item>@string/japanesePodcastURL</item>
        <item>@string/germanPodcastURL</item>
    </string-array>

    <!-- Date format strings -->
    <string name="dateFormat">MM/dd/yyyy</string>

    <!-- Home page vision, statement, values -->
    <string-array name="home_page_values">
        <item>Our Vision</item>
        <item>Statement of Faith</item>
        <item>Core Values</item>
    </string-array>

    <!-- HomePage URLs -->
    <string name="visionURL">http://www.newhic.org/about/our-vision/</string>
    <string name="statementURL">http://www.newhic.org/about/statement-of-faith/</string>
    <string name="valuesURL">http://www.newhic.org/about/core-values/</string>

    <!-- Homepage links array -->
    <string-array name="homepage_links_array">
        <item>@string/visionURL</item>
        <item>@string/statementURL</item>
        <item>@string/valuesURL</item>
    </string-array>

    <!-- RSS announcement XML URLs -->
    <string name="announceURL">http://www.newhic.org/feed/</string>

    <!-- URLs -->
    <string name="visionUrl"><a href="http://www.newhic.org/about/our-vision">Our Vision</a></string>
    <string name="statementOfFaithUrl"><a href="http://www.newhic.org/about/statement-of-faith">Statement of Faith</a></string>
    <string name="coreValuesUrl"><a href="http://www.newhic.org/about/core-values">Core Values</a></string>


    <!-- Preference Fragment strings -->
    <string name="prefLangCatTitle">Languages</string>
    <string name="prefOthCatTitle">Other</string>
    <string name="prefPolCatTitle">Privacy Policy</string>

    <string name="prefLangTitle">Podcast Language</string>
    <string name="prefLangSumm">Select the language you want podcast default to be in</string>

    <string name="prefAbtTitle">About</string>
    <string name="prefAbtSumm">About the developer and the NHIC app</string>

    <string name="prefAckTitle">Acknowlegements</string>
    <string name="prefAckSumm">The people who have made this app possible through their support</string>

    <string name="prefPolTitle">Policy</string>

    <string name="aboutDev">Apps4Christ is a development team aimed at creating apps for church communities. As software engineers by trade, they hope to use their skills for the glory of God\'s kingdom! </string>
    <string name="aboutApp">The NHIC App was birthed when the Ohana caregroups started their weekly sermon listening. While it was much easier for iTunes users to get the podcasts, the rest of us had to rely on dropbox. Uploading and downloading the sermons proved to be a complicated process and a new way of doing things was needed. The NHIC App started off as a simple podcast application but slowly morphed into a fully featured app. As it is an ongoing project, please feel free to report bugs by emailing nhicdev@gmail.com. Please include your phone model in the report.</string>


    <string name="prefVersion">NHIC App Version</string>

    <string name="testerAck">Special thanks to the following people who let me try untested software on their phones. Thank you for all the initial bug reports, contributions, and encouragement.</string>
    <string name ="nhicAck">To the NHIC staff, thank you for all your encouragement and support in to making this a reality. </string>

    <string name ="nhicAckPpl">Samantha Aw, Tara Bastatas, Martha Bailon, Kyla Hoggard, Kevin Hsu, Eric Hu, Spencer Huang, Joy Macaluso, Pat Macaluso, Sherry Ren, Dawn Roman, Joanne Shea, Rachel Tien, Aaron Tokita, Kenny Tsai, Eric Wang, Annie Wong. </string>
    <string name = "DevAck">Special thanks to the following people who helped with the development of the app</string>
    <string name = "DevAckPpl">Joe Chee, Zechariah Cheung, Steven Hsu, Peter Hu, Mark Merin, Torey Tokita, Joseph Tsai, Derek Tseng</string>
    <!-- Acknowledgements Items -->
    <string-array name="ack_items">
        <item>Samantha Aw</item>
        <item>Tara Bastatas</item>
        <item>Martha Bailon</item>
        <item>Joe Chee</item>
        <item>Kyla Hoggard</item>
        <item>Kevin Hsu</item>
        <item>Steven Hsu</item>
        <item>Eric Hu</item>
        <item>Spencer Huang</item>
        <item>Joy Macaluso</item>
        <item>Pat Macaluso</item>
        <item>Sherry Ren</item>
        <item>Dawn Roman</item>
        <item>Joanne Shea</item>
        <item>Rachel Tien</item>
        <item>Aaron Tokita</item>
        <item>Kenny Tsai</item>
        <item>Eric Wang</item>
        <item>Annie Wong</item>
    </string-array>
    <string name="EULA">Copyright 2014 New Hope International Church. All rights reserved. This software may not be copied, reproduced, transmitted, reduced to any electronic medium or machine readable format without prior consent in writing from New Hope International Church or AppsForChrist. Users may not modify, translate, or decompile into its constituent source code. DISCLAIMER: User acknowledges that the software may not be free from defects and may not satisfy all user needs. In no event will New Hope International Church or AppsForChrist be held liable for direct, indirect, incidental or consequential damages. These damages cover defects on the device, or financial loss.   </string>
    <string name="imageString">Image</string>
    <string name="blankString">         </string>
    <string name="holySpiritString">The Holy Spirit</string>
    <!--random-->
</resources>
