<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/announcementTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/defaultAnnouncement"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/announcementDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/defaultDate"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/announcementDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:text="@string/defaultAnnouncementDesc"
        android:textSize="14sp" />

</LinearLayout>