<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/aboutPageDeveloperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:text="@string/aboutDev"
        android:textSize="@dimen/aboutText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blankString" />

    <TextView
        android:id="@+id/aboutPageAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:text="@string/aboutApp"
        android:textSize="@dimen/aboutText" />

</LinearLayout>